[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warpylib"
version = "0.1.0"
description = "Python library for cubic spline grid interpolation, replicating CubicGrid functionality"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "GPL3"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "torch-cubic-spline-grids>=0.0.10",
    "numpy>=1.20.0",
    "lxml>=4.9.0",  # Efficient XML processing
    "starfile>=0.5.0",  # STAR file I/O for cryo-EM data
    "mrcfile",
    "torch-projectors",
    "torch-subpixel-crop>=0.1.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/yourusername/warpylib"
Repository = "https://github.com/yourusername/warpylib"

[tool.setuptools.packages.find]
where = ["."]
include = ["warpylib*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
